# image_search

./: .gitignore  README.md  caption_logic.py  cli.py  embed_img.py  face_recognition.py  monitor.py  ocr.py  process copy.py  process.py  pyproject.toml  requirements.txt  run.py  vector_db.py  vllm_logic.py
known_faces/: known_faces_db.pkl
qdrant_db/: meta.json
qdrant_db/collection/personal_photos/: storage.sqlite
resources/: icon.icns
scripts/: build_app.py  build_lightweight.py  create_dmg.sh  create_icon.py
src/image_search/: __init__.py  __main__.py  app.py  cli.py
src/image_search/core/: __init__.py  embedder.py  face_recognition.py  monitor.py  ocr.py  search_engine.py
src/image_search/gui/: __init__.py  image_card.py  image_grid.py  image_preview.py  image_scanner.py  main_window.py  settings_panel.py  theme.py  workers.py
