[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-search"
version = "1.0.0"
description = "Semantic image search powered by Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Deepak Silaych" }
]
keywords = [
    "image-search",
    "semantic-search",
    "face-recognition",
    "ocr",
    "apple-silicon",
    "mlx",
    "clip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mlx>=0.0.10",
    "mlx_clip @ git+https://github.com/harperreed/mlx_clip.git",
    "ocrmac>=1.0.0",
    "qdrant-client>=1.7.0",
    "deepface>=0.0.83",
    "opencv-python-headless",
    "pillow",
    "psutil",
    "numpy",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
image-search = "image_search.app:main"
image-search-cli = "image_search.cli:main"

[project.gui-scripts]
image-search-gui = "image_search.app:main"

[project.urls]
Homepage = "https://github.com/DeepakSilaych/image_search"
Repository = "https://github.com/DeepakSilaych/image_search"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/image_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

